...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/mainactivityid"
    >

    <TextView
        android:id="@+id/calendarName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF" />


        <TextView
            android:id="@+id/monthYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="March 2021"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />



        <Button
            android:id="@+id/nextMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="nextMonth"
            android:text="Next"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF" />


...
