...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a6a6a6">

    <Button
        android:id="@+id/user1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="userButtonListener"
        android:text="User 1"
        android:textAlignment="center"
        app:backgroundTint="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user2"
...
