<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/confirmNamePopupBttn"
        android:title="Confirm" />
    <item
        android:id="@+id/denyNamePopupBttn"
        android:title="Go Back!"/>
</menu>